--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -17,4 +17,8 @@
         android:id="@+id/navigation_swap"
         android:title="Swap" />
 
+    <item
+        android:id="@+id/navigation_walletconnect"
+        android:title="WC" />
+
 </menu>
